--- a/todolist.html
+++ b/todolist.html
@@ -6,13 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./todolist.css">
-    <script src="./todolist.js" defer></script>
+    <script src="./javascript/todolist.js" defer></script>
     <title>To do list</title>
 </head>
 
 <body>
-    <video class="background-video" autoplay loop muted
-        src="./assets/video/vecteezy_abstract-kawaii-cool-sky-background-soft-gradient-pastel-comic-graphic_1806873.mp4">
+    <video class="background-video" autoplay loop muted src="./assets/video/vecteezy_abstract-kawaii-cool-sky-background-soft-gradient-pastel-comic-graphic_1806873.mp4">
         <source
             src="./assets/video/vecteezy_abstract-kawaii-cool-sky-background-soft-gradient-pastel-comic-graphic_1806873.mp4"
             type="video">
@@ -35,7 +34,7 @@
         </form>
     </div>
     <main>
-      <div id="noteGrid">
+        <div id="noteGrid">
 
             <!--  <div class="noteCard" id="noteCard">
 
@@ -54,7 +53,7 @@
 
             </div>-->
 
-        </div> 
+        </div>
     </main>
 
 
